Correction Safari

--- a/src/components/modalContent/ModalContent.scss
+++ b/src/components/modalContent/ModalContent.scss
@@ -71,6 +71,10 @@
         }
       }
 
+      .button-black {
+        color: #111111;
+      }
+
       &:visited {
         color: #111111;
       }
