--- a/src/containers/header/Header.scss
+++ b/src/containers/header/Header.scss
@@ -178,6 +178,10 @@
           button {
             font-size: 1rem;
           }
+
+          .button-black {
+            color: #111111;
+          }
         }
       }
     }
